...
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.initialisationStatus}"
            android:textSize="@dimen/text_hint_size"
            app:layout_constraintBottom_toTopOf="@id/file_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            tools:text="@string/initialisation_checking_data"/>

        <androidx.recyclerview.widget.RecyclerView
...
            android:visibility="@{viewModel.progressBarStatus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_list" />

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="@{viewModel.proceedButtonEnabled}"
            android:text="@string/initialise_act_proceed_button"
            android:layout_margin="8dp"
...
