<?xml version="1.0" encoding="utf-8"?>

<!--
 ~
 ~ Copyright (c) 2022-2025 Alan M Varghese <alan@digistorm.in>
 ~
 ~ This files is part of Aksharam, a script teaching app for Indic
 ~ languages.
 ~
 ~ Aksharam is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ Aksharam is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even teh implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
 ~
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/letter_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- This is the container we will animate -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:transitionGroup="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <in.digistorm.aksharam.activities.main.util.AutoAdjustingTextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/test_text"
                android:textSize="@dimen/letter_info_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/transliterated_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:includeFontPadding="true"
                android:padding="8dp"
                android:text="@string/test_text"
                android:textSize="@dimen/letter_info_transliterated_heading"
                app:layout_constraintBottom_toBottomOf="@+id/heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heading"
                app:layout_constraintTop_toTopOf="@id/heading" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="horizontal|vertical"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/word_and_meaning_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/words_heading"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/letter_info_example_words"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:padding="2dp"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/space"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/word_and_meaning_contents"/>

                    <androidx.legacy.widget.Space
                        android:id="@+id/space"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintEnd_toStartOf="@+id/meaning_heading"
                        app:layout_constraintStart_toEndOf="@+id/words_heading"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/word_and_meaning_contents"/>

                    <TextView
                        android:id="@+id/meaning_heading"
                        android:layout_width="150dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/letter_info_example_meaning"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="2dp"
                        app:layout_constraintStart_toEndOf="@id/space"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/words_heading"
                        app:layout_constraintBottom_toBottomOf="@id/words_heading"/>

                    <LinearLayout
                        android:id="@+id/word_and_meaning_contents"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/words_heading"
                        app:layout_constraintBottom_toTopOf="@id/info"/>

                    <!-- alignment in this tv is defined by HTML & CSS !-->
                    <TextView
                        android:id="@+id/info"
                        style="@style/Aksharam.TextView.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:padding="2dp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/word_and_meaning_contents"
                        app:layout_constraintBottom_toTopOf="@id/diacritic_hint"/>

                    <TextView
                        android:id="@+id/diacritic_hint"
                        style="@style/Aksharam.TextView.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:gravity="start|center_vertical"
                        android:minWidth="200dp"
                        android:minHeight="50dp"
                        android:text="@string/test_text"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/diacritic_examples_container"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/info"
                        tools:visibility="visible"
                        tools:text="@string/letter_with_vowel_signs" />

                    <androidx.gridlayout.widget.GridLayout
                        android:id="@+id/diacritic_examples_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="gone"
                        app:alignmentMode="alignBounds"
                        app:columnCount="5"
                        app:layout_constraintBottom_toTopOf="@id/ligatures_with_letter_as_prefix_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/diacritic_hint"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/ligatures_with_letter_as_prefix_tv"
                        style="@style/Aksharam.TextView.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/ligatures_with_letter_as_prefix"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/ligatures_with_letter_as_prefix_gl"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/diacritic_examples_container"
                        tools:visibility="visible" />

                    <androidx.gridlayout.widget.GridLayout
                        android:id="@+id/ligatures_with_letter_as_prefix_gl"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="gone"
                        app:alignmentMode="alignBounds"
                        app:columnCount="5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ligatures_with_letter_as_prefix_tv"
                        app:layout_constraintBottom_toTopOf="@id/ligatures_with_letter_as_suffix_tv"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/ligatures_with_letter_as_suffix_tv"
                        style="@style/Aksharam.TextView.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/ligatures_with_letter_as_suffix"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/ligatures_with_letter_as_suffix_gl"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ligatures_with_letter_as_prefix_gl"
                        tools:visibility="visible" />

                    <androidx.gridlayout.widget.GridLayout
                        android:id="@+id/ligatures_with_letter_as_suffix_gl"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="gone"
                        app:alignmentMode="alignBounds"
                        app:columnCount="5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ligatures_with_letter_as_suffix_tv"
                        tools:visibility="visible">
                    </androidx.gridlayout.widget.GridLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
